2015-12-29  Florian Weimer  <fweimer@redhat.com>

	* malloc/tst-malloc-thread-fail.c: New file.
	* malloc/Makefile (tests): Add tst-malloc-thread-fail.
	(tst-malloc-thread-fail): Link against libpthread.

2015-12-29  Mike Frysinger  <vapier@gentoo.org>

	* scripts/list-fixed-bugs.py: Import argparse.  Call main instead.
	(get_parser): New function.
	(main): New function.

2015-12-29  Rob Wu  <rob@robwu.nl>

	[BZ #19369]
	* resolv/res_init.c (__res_vinit): Reset defdname before use.

2015-12-29  John David Anglin  <danglin@gcc.gnu.org>

	[BZ #19270]
	* sysdeps/hppa/fpu/bits/mathdef.h (__NO_LONG_DOUBLE_MATH): Define.

2015-12-28  Mike Frysinger  <vapier@gentoo.org>

	[BZ #15421]
	* sysdeps/ia64/fpu/w_lgamma_main.c: Change gammaf to gamma.

2015-12-23  Torvald Riegel  <triegel@redhat.com>

	[BZ #13690]
	* sysdeps/nptl/lowlevellock.h (__lll_unlock): Do not access the lock
	after releasing it.
	(__lll_robust_unlock): Likewise.
	* nptl/pthread_mutex_unlock.c (__pthread_mutex_unlock_full): Likewise.
	* sysdeps/unix/sysv/linux/sparc/lowlevellock.h (lll_unlock): Likewise.
	(lll_robust_unlock): Likewise.
	* sysdeps/unix/sysv/linux/lowlevellock-futex.h (__lll_private_flag):
	Prevent warnings in callers.

2015-12-23  Florian Weimer  <fweimer@redhat.com>

	* malloc/arena.c (list_lock): Update comment.

2015-12-22  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/hwcapinfo.c: Export symbol
	__parse_hwcap_and_convert_at_platform to libc.a.

2015-12-22  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Added
	platform and feature support for POWER9.
	* sysdeps/powerpc/dl-procinfo.h: Likewise.
	* sysdeps/powerpc/powerpc32/power9/Implies: New file.
	* sysdeps/powerpc/powerpc32/power9/fpu/multiarch/Implies: Likewise.
	* sysdeps/powerpc/powerpc32/power9/multiarch/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power9/Implies: Likewise, for powerpc64.
	* sysdeps/powerpc/powerpc64/power9/fpu/Implies: Likewise.