@@ -1,6 +1,5 @@
 libc.so: calloc
 libc.so: free
-libc.so: fscanf
 libc.so: malloc
 libc.so: memalign
 libc.so: raise
